--- a/exp-elm.tex
+++ b/exp-elm.tex
@@ -1,34 +1,34 @@
-% Máquinas Extremas de Aprendizado Ativo
-\section{Adaptações de \elms}\label{elmnovas}
-A código das adaptações apresentadas nas próximas seções e outras variantes
-está disponível publicamente \citep{doi/elm}.
-
-\esb{estudo de caso para um dado learner}
-
-\tar{menciona inexistência da combinação de ELM e AL na literatura
-e mostra AL sendo melhor que aleat e nao muito pior que passiva;
-explorar resultados separadamente pra cada tipo de ELM}
-
-\tar{ impossível completar todas as bases, mas ok;
-quanto mais memória, mais datasets}
-
-\ano{ELM ainda não sabe lidar com exemplos ponderados! (necessário para SGmulti*)}
-
-\subsection{I-ELM interativa}
-
-As propostas incrementais para IELM e CIELM mostraram-se
-positivamente impactadas pelo aprendizado ativo no experimento principal.
-% \subsection{EIELM}
-
-\subsection{CI-ELM interativa}
-
-\subsection{OSEM-PRESS-ELM}
-\ano{foi usada ELM com topologia raiz(N) no segundo experimento preliminar para demonstrar viabilidade
-de AL com ELM \citep{santos2014viabilidade};
-e tb foi usada como metaclassificador no último experimento}
-\tar{citar apendice}
-
-\section{Máquina extrema de aprendizado ativo baseada no impacto esperado}
-experimenta ExpELMChange
-(AL especifico pra nintera e/ou pra IELM e/ou CIELM) -
-comparar com outras estrats.
+% % Máquinas Extremas de Aprendizado Ativo
+% \section{Adaptações de \elms}\label{elmnovas}
+% A código das adaptações apresentadas nas próximas seções e outras variantes
+% está disponível publicamente \citep{doi/elm}.
+% 
+% \esb{estudo de caso para um dado learner}
+% 
+% \tar{menciona inexistência da combinação de ELM e AL na literatura
+% e mostra AL sendo melhor que aleat e nao muito pior que passiva;
+% explorar resultados separadamente pra cada tipo de ELM}
+% 
+% \tar{ impossível completar todas as bases, mas ok;
+% quanto mais memória, mais datasets}
+% 
+% \ano{ELM ainda não sabe lidar com exemplos ponderados! (necessário para SGmulti*)}
+% 
+% \subsection{I-ELM interativa}
+% 
+% As propostas incrementais para IELM e CIELM mostraram-se
+% positivamente impactadas pelo aprendizado ativo no experimento principal.
+% % \subsection{EIELM}
+% 
+% \subsection{CI-ELM interativa}
+% 
+% \subsection{OSEM-PRESS-ELM}
+% \ano{foi usada ELM com topologia raiz(N) no segundo experimento preliminar para demonstrar viabilidade
+% de AL com ELM \citep{santos2014viabilidade};
+% e tb foi usada como metaclassificador no último experimento}
+% \tar{citar apendice}
+% 
+% \section{Máquina extrema de aprendizado ativo baseada no impacto esperado}
+% experimenta ExpELMChange
+% (AL especifico pra nintera e/ou pra IELM e/ou CIELM) -
+% comparar com outras estrats.
