--- a/stratsALCKappaFriedSVMRedux.tex
+++ b/stratsALCKappaFriedSVMRedux.tex
@@ -1,26 +1,17 @@
 \begin{table}[h]
 \caption{Um contra um (SVM). Medida: ALCKappa. \textit{Legenda na Tabela \ref{tab:friedClassif}.}}
-\begin{center}\scalebox{0.9}{\begin{tabular}{lcc|cc|cc|cc|cc|cc|cc|cc|cc|c}
- 			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13 & 14 & 15 & 16 & 17 & 18 & 19\\
-1 - Rnd  	& - &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   \\
-2 - Clu  	&   & - &   &   &   & + &   & + &   &   &   &   &   &   &   &   &   &   &   \\ \hline
-3 - \textbf{ATUeuc}	&   &   & - &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   \\
-4 - \textbf{ATUman}	&   &   &   & - &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   \\ \hline
-5 - \textbf{ATUmah}	&   &   &   &   & - &   &   &   &   &   &   &   &   &   &   &   &   &   &   \\
-6 - Ent  	&   &   &   &   &   & - &   &   &   &   &   &   &   &   &   &   &   &   &   \\ \hline
-7 - Mar  	&   &   &   &   &   &   & - &   &   &   &   &   &   &   &   &   &   &   &   \\
-8 - DWeuc	&   &   &   &   &   &   &   & - &   &   &   &   &   &   &   &   &   &   &   \\ \hline
-9 - TUeuc	&   &   &   &   &   & * &   & * & - &   &   &   &   &   &   &   &   &   &   \\
-10 - TUman	& * &   &   &   &   & * & . & * &   & - & + &   &   &   &   &   &   &   &   \\ \hline
-11 - \textbf{SGmultic}	&   &   &   &   &   &   &   &   &   &   & - &   &   &   &   &   &   &   &   \\
-12 - EERacu	& * &   & . &   &   & * & + & * &   &   & * & - &   &   &   &   &   & + &   \\ \hline
-13 - EERent	& * & * & * & * & * & * & * & * & * & . & * &   & - & * &   & + &   & * & * \\
-14 - TUmah	&   &   &   &   &   & * &   & * &   &   &   &   &   & - &   &   &   &   &   \\ \hline
-15 - \textbf{GATUeuc}	& * &   & . & . &   & * & + & * &   &   & * &   &   &   & - &   &   & + &   \\
-16 - \textbf{GATUman}	& + &   &   &   &   & * &   & * &   &   & . &   &   &   &   & - &   &   &   \\ \hline
-17 - \textbf{GATUmah}	& * &   & . &   &   & * & + & * &   &   & * &   &   &   &   &   & - & + &   \\
-18 - SVMRBFbal	&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & - &   \\ \hline
-19 - SVMRBFsim	&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & - \\\end{tabular}}
+\begin{center}\begin{tabular}{lcc|cc|cc|cc|cc}
+ 			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10\\
+1 - Rnd  	& - &   &   &   &   &   &   &   &   &   \\
+2 - Clu  	&   & - &   &   &   &   &   &   &   &   \\ \hline
+3 - \textbf{ATUman}	&   &   & - &   &   &   &   &   &   &   \\
+4 - \textbf{GATUman}	&   &   &   & - &   &   &   &   &   &   \\ \hline
+5 - \textbf{SGmulti}	&   &   &   &   & - &   &   &   &   &   \\
+6 - Mar  	&   &   &   &   &   & - &   &   &   &   \\ \hline
+7 - TUman	&   &   &   &   &   &   & - &   &   &   \\
+8 - EERent	& * & * & * & * & * & * & * & - & * & * \\ \hline
+9 - SVMRBFbal	&   &   &   &   &   &   &   &   & - &   \\
+10 - SVMRBFsim	&   &   &   &   &   &   &   &   &   & - \\ \hline\end{tabular}
 \label{stratsALCKappaFriedSVMRedux}
 \end{center}
 \end{table}
