--- a/tree.tex
+++ b/tree.tex
@@ -1,23 +1,33 @@
-\node[line width=0.3ex, decision] {aprendiz}
-child {node [decision, label=5NN] {\#exemplos}
-child {node [outcome, label=$\leq614$] {EERent \\$107$\\$21\%$}}
-child {node [outcome, label=$>614$] {\textbf{HTUmah} \\$115$\\$17\%$}}}
-child {node [decision, label=C4.5w] {\%major.}
-child {node [outcome, label=$\leq50$] {\textbf{HTUman} \\$76$\\$16\%$}}
-child {node [outcome, label=$>50$] {EERent \\$113$\\$24\%$}}}
-child {node [decision, label=CIELM] {\#atributos}
-child {node [outcome, label=$\leq10$] {Mar \\$77$\\$29\%$}}
-child {node [outcome, label=$>10$] {DWeuc \\$126$\\$25\%$}}}
-child {node [decision, label=NB] {$\frac{\%major.}{\%minor.}$}
-child {node [decision, label=$\leq2$] {\%major.}
-child {node [outcome, label=$\leq52$] {EERent \\$52$\\$21\%$}}
-child {node [outcome, label=$>52$] {Mar \\$56$\\$23\%$}}}
-child {node [outcome, label=$>2$] {EERent \\$98$\\$22\%$}}}
-child {node [decision, label=RFw] {\#classes}
-child {node [decision, label=$\leq4$] {\#atributos}
-child {node [outcome, label=$\leq12$] {TUmah \\$60$\\$28\%$}}
-child {node [outcome, label=$>12$] {Mar \\$78$\\$22\%$}}}
-child {node [outcome, label=$>4$] {TUman \\$56$\\$32\%$}}}
-child {node [decision, label=SVM] {\%major.}
-child {node [outcome, label=$\leq36$] {SVMRBFsim \\$50$\\$16\%$}}
-child {node [outcome, label=$>36$] {EERent \\$140$\\$22\%$}}};
+\node[line width=0.3ex, decision] {algoritmo}
+child {node [decision] {\%nominais}
+child {node [decision] {\#atributos}
+child {node [decision] {\#exemplos}
+child {node [outcome] {Rnd \\$19$: $21\%$} edge from parent node [cond] {$\leq1078$}}
+child {node [outcome] {\textbf{HTUmah} \\$12$: $50\%$} edge from parent node [cond] {$>1078$}}edge from parent node [cond] {$\leq6$}}
+child {node [decision] {\#classes}
+child {node [decision] {\%minor.}
+child {node [outcome] {\textbf{ATUmah} \\$32$: $34\%$} edge from parent node [cond] {$\leq30$}}
+child {node [outcome] {EERent \\$24$: $58\%$} edge from parent node [cond] {$>30$}}edge from parent node [cond] {$\leq5$}}
+child {node [outcome] {TUmah \\$18$: $33\%$} edge from parent node [cond] {$>5$}}edge from parent node [cond] {$>6$}}edge from parent node [cond] {$\leq77$}}
+child {node [outcome] {Mar \\$12$: $42\%$} edge from parent node [cond] {$>77$}}edge from parent node [cond] {5NN}}
+child {node [decision] {\#classes}
+child {node [outcome] {EERent \\$78$: $36\%$} edge from parent node [cond] {$\leq5$}}
+child {node [outcome] {TUmah \\$17$: $35\%$} edge from parent node [cond] {$>5$}}edge from parent node [cond] {C4.5w}}
+child {node [decision] {$\frac{\%major.}{\%minor.}$}
+child {node [decision] {\#atributos}
+child {node [outcome] {Mar \\$17$: $47\%$} edge from parent node [cond] {$\leq6$}}
+child {node [outcome] {TUmah \\$70$: $49\%$} edge from parent node [cond] {$>6$}}edge from parent node [cond] {$\leq14$}}
+child {node [outcome] {Mar \\$13$: $46\%$} edge from parent node [cond] {$>14$}}edge from parent node [cond] {CIELM}}
+child {node [decision] {\%nominais}
+child {node [outcome] {EERent \\$74$: $39\%$} edge from parent node [cond] {$\leq13$}}
+child {node [outcome] {Mar \\$21$: $38\%$} edge from parent node [cond] {$>13$}}edge from parent node [cond] {NB}}
+child {node [decision] {\#atributos}
+child {node [outcome] {TUmah \\$16$: $44\%$} edge from parent node [cond] {$\leq5$}}
+child {node [decision] {\%minor.}
+child {node [outcome] {TUmah \\$53$: $70\%$} edge from parent node [cond] {$\leq34$}}
+child {node [outcome] {Mar \\$25$: $48\%$} edge from parent node [cond] {$>34$}}edge from parent node [cond] {$>5$}}edge from parent node [cond] {RFw}}
+child {node [decision] {\#exemplos}
+child {node [decision] {\#atributos}
+child {node [outcome] {SVMsim \\$19$: $58\%$} edge from parent node [cond] {$\leq24$}}
+child {node [outcome] {EERent \\$12$: $42\%$} edge from parent node [cond] {$>24$}}edge from parent node [cond] {$\leq273$}}
+child {node [outcome] {EERent \\$63$: $38\%$} edge from parent node [cond] {$>273$}}edge from parent node [cond] {SVM}};
