--- a/treeBest.tex
+++ b/treeBest.tex
@@ -1,22 +1,25 @@
-\node[line width=0.3ex, decision] {aprendiz}
-child {node [decision, label=5NN] {$\frac{\%major.}{\%minor.}$}
-child {node [outcome, label=$\leq1.23$] {TUman \\$6\mid50\%$}}
-child {node [decision, label=$>1.23$] {\#atributos}
-child {node [outcome, label=$\leq27.0$] {EERent \\$5\mid40\%$}}
-child {node [outcome, label=$>27.0$] {\textbf{ATUman} \\$5\mid40\%$}}}}
-child {node [outcome, label=C4.5w] {EERent \\$9\mid44\%$}}
-child {node [decision, label=CIELM] {\%nominais}
-child {node [outcome, label=$\leq11.111$] {Mar \\$9\mid44\%$}}
-child {node [outcome, label=$>11.111$] {TUmah \\$5\mid60\%$}}}
-child {node [outcome, label=NB] {TUeuc \\$9\mid22\%$}}
-child {node [decision, label=RFw] {\%nominais}
-child {node [decision, label=$\leq16.667$] {\#atributos}
-child {node [outcome, label=$\leq9.0$] {TUmah \\$8\mid38\%$}}
-child {node [decision, label=$>9.0$] {\#exemplos}
-child {node [outcome, label=$\leq1668.8$] {TUman \\$5\mid100\%$}}
-child {node [outcome, label=$>1668.8$] {Mar \\$6\mid50\%$}}}}
-child {node [outcome, label=$>16.667$] {DWeuc \\$5\mid40\%$}}}
-child {node [decision, label=SVM] {\#exemplos}
-child {node [outcome, label=$\leq614.4$] {EERacu \\$8\mid25\%$}}
-child {node [outcome, label=$>614.4$] {EERent \\$12\mid75\%$}}}
-child {node [outcome, label=ELM] {TUmah \\$4\mid50\%$}};
+\node[line width=0.3ex, decision] {algoritmo}
+child {node [decision] {$\frac{\#exemplos}{\#atrib.}$}
+child {node [decision] {\#exemplos}
+child {node [outcome] {EERent \\$5$: $80\%$} edge from parent node [cond] {$\leq226$}}
+child {node [outcome] {TUmah \\$4$: $50\%$} edge from parent node [cond] {$>226$}}edge from parent node [cond] {$\leq50$}}
+child {node [outcome] {Mar \\$6$: $67\%$} edge from parent node [cond] {$>50$}}edge from parent node [cond] {5NN}}
+child {node [decision] {\%minor.}
+child {node [outcome] {EERent \\$5$: $80\%$} edge from parent node [cond] {$\leq32$}}
+child {node [outcome] {TUmah \\$4$: $75\%$} edge from parent node [cond] {$>32$}}edge from parent node [cond] {C4.5w}}
+child {node [decision] {\%major.}
+child {node [outcome] {TUmah \\$5$: $80\%$} edge from parent node [cond] {$\leq42$}}
+child {node [decision] {\#atributos}
+child {node [outcome] {Mar \\$7$: $71\%$} edge from parent node [cond] {$\leq20$}}
+child {node [outcome] {TUmah \\$4$: $75\%$} edge from parent node [cond] {$>20$}}edge from parent node [cond] {$>42$}}edge from parent node [cond] {CIELM}}
+child {node [decision] {\#classes}
+child {node [outcome] {\textbf{ATUmah} \\$4$: $75\%$} edge from parent node [cond] {$\leq2$}}
+child {node [outcome] {EERent \\$5$: $80\%$} edge from parent node [cond] {$>2$}}edge from parent node [cond] {NB}}
+child {node [decision] {\#atributos}
+child {node [outcome] {EERent \\$5$: $40\%$} edge from parent node [cond] {$\leq6$}}
+child {node [decision] {\#exemplos}
+child {node [decision] {\%nominais}
+child {node [outcome] {TUmah \\$8$: $100\%$} edge from parent node [cond] {$\leq17$}}
+child {node [outcome] {Mar \\$4$: $50\%$} edge from parent node [cond] {$>17$}}edge from parent node [cond] {$\leq1669$}}
+child {node [outcome] {Mar \\$8$: $50\%$} edge from parent node [cond] {$>1669$}}edge from parent node [cond] {$>6$}}edge from parent node [cond] {RFw}}
+child {node [outcome] {EERent \\$21$: $57\%$} edge from parent node [cond] {SVM}};
